@@ -2,7 +2,7 @@
 
 [![Maven Central](https://img.shields.io/maven-central/v/io.github.holo314/Coeffect.svg?label=Maven%20Central)](https://search.maven.org/artifact/io.github.holo314/Coeffect) [![license](https://img.shields.io/github/license/holo314/Coeffect)](https://www.apache.org/licenses/LICENSE-2.0)
 
-Add a partial Coeffect system into Java using Loom's ExtentLocals.
+Add a partial Coeffect system into Java using Loom's ScopedValues.
 
 ---
 In Java there are generally 2 strategies to manage the parameters a method needs:
@@ -14,7 +14,7 @@ Furthermore, to ensure thread safety we need to have more work.
 For the first method the problem is less apparent, but for the latter it is much harder to deal with.
 
 One way to ensure safety is to use
-Java's [ThreadLocal](https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/ThreadLocal.html), which
+Java's [ThreadLocal](https://docs.oracle.com/en/java/javase/25/docs/api/java.base/java/lang/ThreadLocal.html), which
 ensures that a parameter cannot pass through different threads:
 
 ```java
@@ -46,38 +46,35 @@ This will print
 >
 > ^o^
 
-Project Loom has(/will) added [ExtentLocal](https://openjdk.org/jeps/8263012), which is basically a
-structured `ThreadLocal`.
+Project Loom finalised [ScopedValue](https://docs.oracle.com/en/java/javase/25/docs/api/java.base/java/lang/ScopedValue.html), which is basically a
+structured version of `ThreadLocal`.
 
-One of the most problematic parts of `ThreadLocal` and `ExtentLocal` is that we lose type safety. For `ThreadLocal` you
-can get unexpected `null`s, and for `ExtentLocal` you would get an exception.
+One of the most problematic parts of `ThreadLocal` and `ScopedValue` is that we lose type safety. For `ThreadLocal` you
+can get unexpected `null`s, and for `ScopedValue` you would get an exception.
 
-Any use of `ThreadLocal` or `ExtentLocal` should be attached to a null-check or binding-check.
-Furthermore, have one of those 2 not being `private` creates coupling, security problems, ambiguous APIs.
+Any use of `ThreadLocal` or `ScopedValue` should be attached to a null-check or binding-check.
+Furthermore, have either of those 2 not being `private` is dangerous as it will most likely lead into coupling in your code, security problems and ambiguous APIs.
 
 On the other hand, sending dependencies as parameters have other problems, but the main two I want to talk about are:
 
 1. Parameter bloating
-2. Forced explicit binding
+2. Explicit binding of all parameters
 
-The first point is pretty clear, you can get methods with 5/6 parameters or more, which creates long signatures **as
-well as long in the calling site**.
+The first point is pretty clear, you can get methods with 5/6 parameters or more, which creates long signatures that are inconvenient to call and read.
 
-The second point is easier to miss, but here is an example:
+The second point is easier to miss, consider the following snippet:
 
 ```java
-class clazz {
-    public static void main(String[] args) {
-        foo(666);
-    }
+void main() {
+    foo(666);
+}
 
-    public static void foo(int x) {
-        bar(x);
-    }
+void foo(int x) {
+    bar(x);
+}
 
-    public static void bar(int x) {
-        System.out.println(x);
-    }
+void bar(int x) {
+    System.out.println(x);
 }
 ```
 
@@ -85,33 +82,34 @@ Notice that `foo` receive a parameter **only** to pass it to `bar`, it doesn't a
 
 ---
 
-# The "solution"
+# How we solve it
 
-The solution this library offers is to create a (partial) [Coeffect System](http://tomasp.net/coeffects/).
+The solution this library offers is to create a (partial) [Coeffect System](http://tomasp.net/coeffects/) (for those who do not care about the maths behind the concept, simply skip the link, this readme will not assume any such knowledge).
 
-The idea is to use `ExtentLocal` and a compiler plugin to add safety and explicitness.
+The idea is to use `ScopedValue` to create an implicit context behind every function call and use a compiler plugin to add type safety.
 
-`Implementation note:` It is impossible to create this system with `ThreadLocal` because there is no control over the
+> `Implementation note:` It is impossible to create this system with `ThreadLocal` because there is no control over the
 call of `ThreadLocal#remove`.
 
 Before diving into the details, let's see how the above example will look like:
 
 ```java
-class clazz {
-    public static void main(String[] args) {
-        Coeffect.with(666)
-                .run(() -> foo());
-    }
+import io.github.holo314.coeffect.compiletime.annotations.WithContext;
+import io.github.holo314.coeffect.runtime.Coeffect;
 
-    @WithContext(Integer.class)
-    public static void foo() {
-        bar();
-    }
+void main() {
+    Coeffect.with(666)
+            .run(this::foo);
+}
 
-    @WithContext(Integer.class)
-    public static void bar() {
-        System.out.println(Coeffect.get(Integer.class));
-    }
+@WithContext(Integer.class)
+void foo() {
+    bar();
+}
+
+@WithContext(Integer.class)
+void bar() {
+    IO.println(Coeffect.get(Integer.class));
 }
 ```
 
@@ -128,14 +126,29 @@ With can notice few parts:
 - We **do not** need to specify `@WithContext(Integer.class)` on the `main` method because we don't use any unbound
   dependency
 
-Note that all of those points are **enforced at compile time**, remove any of the `@WithContext` and the compiler will
-yell at you.
+When using the annotation processor the library is shipped with **all of those points are enforced at compile time**. If, for example, we were to change `main` to simply be `foo();` we would get the error:
+
+```text
+error: [Coeffect] Missing requirements in `foo()`: [java.lang.Integer]
+    foo();
+       ^
+  	Add the requirements to the context or wrap it with run/call:
+  		@WithContext({java.lang.Integer, ...})
+  		void main() {...}
+  ---
+  		Coeffect.with(vInteger0)
+  				.run(() -> ...);
+  ---
+  		Coeffect.with(vInteger0)
+  				.call(() -> ...);
+    (see https://github.com/Holo314/coeffect)
+```
 
 ---
 
 # The details
 
-There are few basic rules one should keep in mind, let's go over them (every time I say `run`, it also applies to `call`
+There are few basic rules one should keep in mind, let's go over them (every time `run` is being used, it also applies to `call`
 , which is the same but also returns a value):
 
 ### Enforcing of `Coeffect#get`
@@ -152,7 +165,7 @@ that `@WithContext` can receive several types.
 
 ### `Coeffect` stacks
 
-Coeffect internally saves an `ExtentLocal` instance for each `Class<T>`.
+Coeffect internally saves an `ScopedValue` instance for each `Class<T>`.
 When calling `Coeffect.with(v)` it adds `v` to the top of the stack of `v.getClass()`.
 
 ### The value of `Coeffect#get`
@@ -168,20 +181,20 @@ not `"hi".getClass()`, using non-class literals can either fail at complication,
 The lifetime of every binding is exactly the `Coeffect.Carrier#run` clause:
 
 ```java
-class clazz {
-    void foo() {
-        Coeffect.with(3)
-                .with("Holo")
-                .run(() -> {
-                    Coeffect.with(6)
-                            .run(() -> {
-                                Coeffect.get(Integer.class); // 6
-                                Coeffect.get(String.class); // Holo
-                            });
-                    Coeffect.get(Integer.class); // 3
-                    Coeffect.get(String.class); // Holo
-                });
-    }
+import io.github.holo314.coeffect.runtime.Coeffect;
+
+void main() {
+    Coeffect.with(3)
+            .with("Holo")
+            .run(() -> {
+                Coeffect.with(6)
+                        .run(() -> {
+                            IO.println(Coeffect.get(Integer.class)); // 6
+                            IO.println(Coeffect.get(String.class)); // Holo
+                        });
+                IO.println(Coeffect.get(Integer.class)); // 3
+                IO.println(Coeffect.get(String.class)); // Holo
+            });
 }
 ```
 
@@ -210,8 +223,8 @@ class class1
     // @WithContext({String.class}) // legal
     // @WithContext({Integer.class}) // legal
     // @WithContext() // legal
-    @WithContext(CharSequence.class)
-    // illegal, `CharSequence.class` does not appear in the `@WithContext` annotation of `clazz::foo`
+    // No @WithContext at all, equivalent to @WithContext() // legal
+    // @WithContext(CharSequence.class) // illegal, `CharSequence.class` does not appear in the `@WithContext` annotation of `clazz::foo`
     @Override
     void foo() {}
 }
@@ -221,11 +234,8 @@ Similar thing is true about `interface`s and `implementation`
 
 ### Threads
 
-One of the most complicated parts of programming is multiprocessing, be it with threads/continuations or any other
-implementation.
-
-`Coeffect` is built upon `ExtentLocal` that comes with project Loom to
-complement [Structured Concurrency](https://openjdk.org/jeps/428), that means that all work with threads and `Coeffect`
+`Coeffect` is built upon `ScopedValue` that comes with project Loom to
+complement [Structured Concurrency](https://openjdk.org/jeps/505), that means that all work with threads and `Coeffect`
 together should use Structured Concurrency, any use of non-Structured Concurrency can cause false positives.
 
 ## The `Coeffect.Carrier` object
@@ -237,16 +247,14 @@ This object is an immutable object contains within it both the actual stacks, an
 ```java
 import io.github.holo314.coeffect.runtime.Coeffect;
 
-class Example {
-    void foo() {
-        var carrier = Coeffect.with(":|");
-        carrier.with("|:");
-        carrier.run(() -> System.out.println(Coeffect.get(String.class))); // print ":|"
-    }
+void main() {
+    var carrier = Coeffect.with(":|");
+    carrier.with("|:");
+    carrier.run(() -> IO.println(Coeffect.get(String.class))); // print ":|"
 }
 ```
 
-Like I said above, this object holds the types that got bound, you can see that if you are use explicit typing, instead
+Like mentioned above, this object holds the types that got bound, you can see that if you are use explicit typing, instead
 of `var`:
 
 ```java
@@ -254,15 +262,14 @@ import io.github.holo314.coeffect.runtime.Coeffect;
 
 class Example {
     void foo() {
-        // Thanks god for type inference
         Coeffect.Carrier<String, Coeffect.Carrier<Void, Coeffect.Carrier<?, ?>>> carrier = Coeffect.with(":|");
         carrier.with("|:");
-        carrier.run(() -> System.out.println(Coeffect.get(String.class))); // print ":|"
+        carrier.run(() -> IO.println(Coeffect.get(String.class))); // print ":|"
     }
 }
 ```
 
-The `Coeffect` plugin uses this type as a linked list:
+The `Coeffect` annotation processor uses this type as a linked list:
 
 ```
 null                            ⇔ Coeffect.Carrier<?, ?>
@@ -276,14 +283,16 @@ carrier object**.
 ### Passing `Coeffect.Carrier` as a parameter
 
 It is possible to think of `Coeffect.Carrier` as a set of types that represent some context, each instance
-of `Coeffect.Carrier` represent a set of parameters that you can use explicitly.
+of `Coeffect.Carrier` is a context contains the parameters that you can use.
 
-This is why it may be sometimes tempting to pass `Coeffect.Carrier` as a parameter to a method, but **you should never
+It is technically possible to pass `Coeffect.Carrier` as a parameter to a method, but **you should never
 do this**.
 
-This is several reasons, the first and most important of them is: the whole point of this library is to avoid passing
-contextual objects as parameters to a method. Passing `Coeffect.Carrier` as a parameter is basically using
-the `Coeffect` system to implement parameters!
+First of all, if you pass the `Coeffect.Carrier` object it means you can already pass normal parameters, so there is really never a need for that.
+
+Secondly it is very ugly, as discussed above the library uses the generic type of `Coeffect.Carrier` as a kind of "compile time linked list", so the full name of the type of the `Coeffect.Carrier` contains all the types that are bound to it.
+
+Thirdly, as a result of the second point, passing the `Coeffect.Carrier` object as a parameter couples the function that receives it to *every* type it contains, which both restrict the usage of the function, and more importantly expose other dependencies to it which can cause a security risk.
 
 Instead, any method that receive a `Coeffect.Carrier` parameter should transform it into `@WithContext` annotation:
 
@@ -291,19 +300,17 @@ Instead, any method that receive a `Coeffect.Carrier` parameter should transform
 import io.github.holo314.coeffect.compiletime.annotations.WithContext;
 import io.github.holo314.coeffect.runtime.Coeffect;
 
-class Example {
-    void foo() {
-        bar(Coeffect.with(":'("));
-    }
+void main() {
+    bar(Coeffect.with(":'("));
+}
 
-    void bar(Coeffect.Carrier<String, Coeffect.Carrier<Void, Coeffect.Carrier<?, ?>>> x) {
-        x.run(Example::qux);
-    }
+void bar(Coeffect.Carrier<String, Coeffect.Carrier<Void, Coeffect.Carrier<?, ?>>> x) {
+    x.run(this::qux);
+}
 
-    @WithContext(String.class)
-    void qux() {
-        System.out.println(Coeffect.get(String.class));
-    }
+@WithContext(String.class)
+void qux() {
+    System.out.println(Coeffect.get(String.class));
 }
 ```
 
@@ -313,43 +320,38 @@ class Example {
 import io.github.holo314.coeffect.compiletime.annotations.WithContext;
 import io.github.holo314.coeffect.runtime.Coeffect;
 
-class Example {
-    void foo() {
-        Coeffect.with(":')").run(Example::bar);
-    }
+void main() {
+    Coeffect.with(":')").run(this::bar);
+}
 
-    @WithContext(String.class)
-    void bar() {
-        qux();
-    }
+@WithContext(String.class)
+void bar() {
+    qux();
+}
 
-    @WithContext(String.class)
-    void qux() {
-        System.out.println(Coeffect.get(String.class));
-    }
+@WithContext(String.class)
+void qux() {
+    System.out.println(Coeffect.get(String.class));
 }
 ```
 
 ## Lambda's problem
 
-Currently, annotation's parameters must be known at compiletime, that means that _there is not way to allow generics on
+Currently, annotation's parameters must be known at compiletime, that means that _there is no way to allow generics on
 the annotation level_.
 
-Why is this problematic? Let's take the following example:
+Why is this problematic? Consider:
 
 ```java
-import java.util.ArrayList;
-import java.util.function.Function;
-
-public class IntTransformer {
+static class IntTransformer {
     ArrayList<Function<Integer, Integer>> transformers = new ArrayList<>();
 
     public void transform(Function<Integer, Integer> transform) {
-        transformers.add(map);
+        transformers.add(transform);
     }
 
-    public List<Integer> run(int i) {
-        for (var t: transformers) {
+    public int run(int i) {
+        for (var t : transformers) {
             i = t.apply(i);
         }
         return i;
@@ -362,21 +364,20 @@ Now we want to use it with combination of `Coeffect`:
 ```java
 import io.github.holo314.coeffect.runtime.Coeffect;
 
-public class A {
-    public static void main(String[] args) {
-        var x = new intTransformer();
-        x.transform(r -> {
-            var z = Coeffect.get(Integer.class); // ?????
-            return r + z;
-        });
-    }
+void main() {
+    var x = new IntTransformer();
+    x.transform(r -> {
+        var z = Coeffect.get(Integer.class); // ?????
+        return r + z;
+    });
 }
 ```
 
 We cannot dynamically bind objects to an effect, with generics we would "collect the effects" to the instance
 of `IntTransformer` and "discharge" it on "run".
 
-Because of that **the current implementation requires adding a context to the method that defines the lambda**.
+Because of that **the current implementation requires adding a context to the method that defines the lambda**, which is unfortunate.
+
 
 I am open for suggestions for better solutions.
 
@@ -384,32 +385,68 @@ I am open for suggestions for better solutions.
 
 # Future Work and Extra notes
 
-Currently, the compiletime component is a custom component of [error-prone](https://errorprone.info/) with is only an
-analysing tool.
-
-In the future I want to add a functionality for more fluent access to the stacks.
-
-In particular, I want to be able to do something like the following:
+First of all, I wish to align the Coeffect usage in lambda expressions with checked-exceptions, that means that to enable using Coeffects in lambdas one would need to have the `@WithContext` annotation present in the definition of the SAM the lambda is using, so the above example could work as follows:
 
 ```java
-class clazz {
-    void foo() {
-        Coeffect.with(3)
-                .with("Holo")
-                .run(() -> {
-                    Coeffect.with(6)
-                            .run(() -> {
-                                Integer.get(); // 6
-                                String.get(); // Holo
-                            });
-                    Integer.get(); // 3
-                    String.get(); // Holo
-                });
+import io.github.holo314.coeffect.compiletime.annotations.WithContext;
+import io.github.holo314.coeffect.runtime.Coeffect;
+
+void main() {
+    var x = new IntTransformer();
+    // no problem here, IntTransformer#transform doesn't use any method that requires context
+    x.transform(r -> {
+        var z = Coeffect.get(Integer.class);
+        return r + z;
+    });
+
+    // x.run(7); // illegal, x#run is annotated with @WithContext(Integer.class)
+    var result = Coeffect.with(2).call(() -> x.run(7));
+}
+
+@FunctionalInterface
+interface FuncWithIntegerContext<T, R> {
+    @WithContext(Integer.class)
+    R apply(T t);
+}
+
+static class IntTransformer {
+    ArrayList<FuncWithIntegerContext<Integer, Integer>> transformers = new ArrayList<>();
+
+    public void transform(FuncWithIntegerContext<Integer, Integer> transform) {
+        transformers.add(transform);
+    }
+
+    // we are using FuncWithIntegerContext#apply, which is annotated with @WithContext(Integer.class), 
+    // so we need to either annotated this method as well, or bind an integer before
+    // the usage of FuncWithIntegerContext#apply
+    @WithContext(Integer.class)
+    public int run(int i) {
+        for (var t : transformers) {
+            i = t.apply(i);
+        }
+        return i;
+
+        // also works:
+        // Coeffect.with(3)
+        //         .call(() -> {
+        //             var result = i;
+        //             for (var t : transformers) {
+        //                 result = t.apply(result);
+        //             }
+        //             return result; 
+        //         });
+
+        // also works:
+        // for (var t : transformers) {
+        //     var temp = i;
+        //     i = Coeffect.with(5).call(() -> t.apply(temp));
+        // }
+        // return i;
     }
 }
 ```
 
-I was also toying with the idea of enabling _named coeffects_.
+I am also thinking about _named coeffects_ of some sort, but I do not know how to implement them in a satisfactory way currently.
 
 ### Effects
 
@@ -427,18 +464,101 @@ example [Koka](https://koka-lang.github.io/koka/doc/index.html) and [Effekt](htt
 
 ## Usage
 
-To use this project you first need to download [Early Access Java 19-loom](https://jdk.java.net/loom/). The project
-currently use `build 19-loom+6-625`.
+The project run and tested on Java 25, the first version where `ScopedValue` was finalised.
 
 The plugin and library are available
-in [Maven central](https://search.maven.org/artifact/io.github.holo314/Coeffect/1.0/jar) and requires Error-prone.
+in [Maven central](https://central.sonatype.com/artifact/io.github.holo314/Coeffect) and requires Error-prone.
 
 ### Gradle
+#### Library
+For the runtime only simply add
 
-Because of [a missing feature](https://github.com/gradle/gradle/issues/20372) in gradle, it is not possible to use
-arbitrary Java versions, in particular, early access releases don't work.
+```kotlin
+implementation("io.github.holo314:Coeffect:1.2.0")
+```
 
-Hence, it is not possible to use it with Gradle
+to the dependencies section of the `gradle.build(.kts)` file
+
+#### Plugin
+
+To enable the compile type type checks you need to add the `errorprone` plugin and dependency:
+```kotlin
+plugins {
+    id("java")
+    id("application")
+    id("net.ltgt.errorprone") version "<current version>"
+}
+    ...
+
+dependencies {
+    errorprone("com.google.errorprone:error_prone_core:2.45.0")
+    
+    errorprone("io.github.holo314:Coeffect:1.2.0")
+    implementation("io.github.holo314:Coeffect:1.2.0")
+}
+```
+
+`errorprone` has several built in plugins out of the box, to disable them all and enable only this plugin you need to change the `JavaCompile` task:
+
+First add `import net.ltgt.gradle.errorprone.CheckSeverity` and `import net.ltgt.gradle.errorprone.errorprone` to the `build.gradle(.kts)` file and then add the followings:
+
+```groovy
+> build.gradle
+tasks.withType(JavaCompile).configureEach {
+    options.errorprone.disableAllChecks.set(true)
+    options.errorprone.check('Coeffect', CheckSeverity.DEFAULT)
+}
+```
+
+```kotlin
+> build.gradle.kts
+tasks.withType<JavaCompile>().configureEach {
+    options.errorprone.disableAllChecks.set(true)
+    options.errorprone.check("Coeffect" to CheckSeverity.DEFAULT)
+}
+```
+
+Here is a minimal working `build.gradle.kts` file:
+
+```kotlin
+import net.ltgt.gradle.errorprone.CheckSeverity
+import net.ltgt.gradle.errorprone.errorprone
+
+plugins {
+    id("java")
+    id("application")
+    id("net.ltgt.errorprone") version "4.3.0"
+}
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(25))
+    }
+}
+
+application {
+    mainClass = "PoC"
+}
+
+
+group = "org.holo"
+version = "1.0-SNAPSHOT"
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    errorprone("com.google.errorprone:error_prone_core:2.45.0")
+    errorprone("io.github.holo314:Coeffect:1.2.0")
+    implementation("io.github.holo314:Coeffect:1.2.0")
+}
+
+tasks.withType<JavaCompile>().configureEach {
+    options.errorprone.disableAllChecks.set(true)
+    options.errorprone.check("Coeffect" to CheckSeverity.DEFAULT)
+}
+```
 
 ### Maven
 
@@ -454,8 +574,6 @@ To use the library itself first add to your `pom.xml` the following dependency:
     <version>{coeffect.version}</version>
 </dependency>
 ```
-
-When running the program you need to add `--add-modules jdk.incubator.concurrent` to the JVM options.
 
 #### Plugin
 
